feature:updateList() for songs

--- a/index.html
+++ b/index.html
@@ -6,25 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    
 </head>
 <body>
-    <h1>Title</h1>
+    <h1>SongToFi</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque quod error sequi possimus, aut nemo amet ad quibusdam nisi voluptatum sunt temporibus. Qui dolorum quidem ratione a eos, hic illo!</p>
     <form action="">
-
+        <ol class="song-list">
+        </ol>
     </form>
-    <ol>
-        <li class="song_item"><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-    </ol>
+
 </body>
+<script src="index.js"></script>
 </html>
